# astu-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  out.txt  out2.txt
src/ASTU-Basics/Hello Astu/: README.md  main.cpp
src/ASTU-Basics/Number Guessing Game/: CMakeLists.txt  README.md  main.cpp
src/ASTU-SDL-Basics/Hello SDL/: CMakeLists.txt  README.md  main.cpp
src/Game Basics/Camera Demo/: CMakeLists.txt  MainService.cpp  MainService.h  README.md
src/Game Basics/Entity Demo 1/: CMakeLists.txt  MainService.cpp
src/Game Basics/Scene Graph Demo 1/: CMakeLists.txt  MainService.cpp
src/Game Basics/Scene Graph Demo 2/: CMakeLists.txt  MainService.h  README.md  main.cpp
src/Game Basics/Scene Graph Demo 3/: CMakeLists.txt  MainService.cpp
src/Game-Basics/Camera Demo/: MainService.cpp  MainService.h  main.cpp
src/Game-Basics/Entity Demo 1/: MainService.h  README.md  main.cpp
src/Game-Basics/Scene Graph Demo 1/: MainService.cpp  README.md  main.cpp
src/Game-Basics/Scene Graph Demo 2/: MainService.cpp
src/Game-Basics/Scene Graph Demo 3/: MainService.cpp  MainService.h  README.md  main.cpp
src/GameAsteroids/: Asteroid.h  AsteroidSystem.cpp  AsteroidSystem.h  Body2.cpp  Body2.h  Bullet.h  BulletSystem.cpp  BulletSystem.h  CHANGES.md  CMakeLists.txt  Collider.h  CollisionSystem.cpp  CollisionSystem.h  Fadable.h  FadeSystem.cpp  FadeSystem.h  GameEvents.h  GameManager.cpp  GameManager.h  Gun.h  GunSystem.cpp  GunSystem.h  HudService.cpp  HudService.h  Mesh2.h  Mesh2System.cpp  Mesh2System.h  PhysicsSystem.cpp  PhysicsSystem.h  Pose2.h  Ship.h  ShipSystem.cpp  ShipSystem.h  Wrap.h  WrapSystem.cpp  WrapSystem.h  main.cpp
src/GameBoilerplate/: CHANGES.md  CMakeLists.txt  main.cpp
src/GameBoilerplate10/: CMakeLists.txt  main.cpp
src/GameSceneGraph/: CHANGES.md  CMakeLists.txt  CameraControlService.cpp  CameraControlService.h  CameraModeChangerService.cpp  CameraModeChangerService.h  README.md  SceneGraphTestService.cpp  SceneGraphTestService.h  StatusIndicatorService.cpp  StatusIndicatorService.h  main.cpp
src/HelloAstu/: main.cpp
src/Playable-Games/: README.md
src/Playable-Games/Asteroids/: AsteroidSystem.cpp  AsteroidSystem.h  BulletSystem.cpp  BulletSystem.h  CAsteroid.h  CBullet.h  CDebris.h  CGun.h  CMakeLists.txt  CShip.h  CThruster.h  CWrap.h  Constants.h  CreateAsteroidsAssets.swd  DebrisSystem.cpp  DebrisSystem.h  EditorService.cpp  EditorService.h  EntityPrototypeService.cpp  EntityPrototypeService.h  GameEvent.h  GameModeService.cpp  GameModeService.h  GunSystem.cpp  GunSystem.h  HudService.cpp  HudService.h  MeshData.cpp  MeshData.h  ParticleSystem.cpp  ParticleSystem.h  README.md  ShipSystem.cpp  ShipSystem.h  TextRenderService.cpp  TextRenderService.h  ThrusterSystem.cpp  ThrusterSystem.h  WrapSystem.cpp  WrapSystem.h  (+1 more)
src/Playable-Games/Asteroids/misc/: CreateAsteroidsAssets.swd
src/helloastu/: CMakeLists.txt  main.cpp
src/misc/: AstuSdlKeyTable.swd
src/querydevices/: CMakeLists.txt  main.cpp
